# Intent-LLM-Wrapper

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dependencies.py  routes.py
app/core/: config.py  container.py
app/infra/llm/: client.py  factory.py  openrouter_client.py
app/infra/weather/: constants.py  exceptions.py  mappers.py  models.py  open_meteo_client.py
app/prompts/: intent_analysis.py  response_generation.py  responses.py  system.py  weather_generation.py
app/schemas/: intent.py
app/services/: intent_service.py
app/ui/: chat.py
docs/: ARCHITECTURE.md
