[project]
name = "intent-llm-wrapper"
version = "0.1.0"
description = "FastAPI wrapper for intent analysis via OpenRouter OpenAI-compatible API."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "gradio>=5.0.0",
    "httpx>=0.27.2",
    "jinja2>=3.1.4",
    "openai>=2.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# Ambiguous-cyrillic/latin homoglyph warnings (strings/docstrings/comments) are
# false positives for this multilingual app (Russian UI strings, multilingual cities).
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
